--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-<div>
-  <router-outlet *ngIf="isLoginPage"></router-outlet>
-  <div *ngIf="!isLoginPage">
-    <h1>app content</h1>
-    <router-outlet></router-outlet>
+<router-outlet *ngIf="isLoginPage"></router-outlet>
+<div class="container" *ngIf="!isLoginPage" style="padding-top: 30px;">
+  <div class="columns is-0">
+    <div class="column is-narrow">
+      <app-sider></app-sider>
+    </div>
+    <div class="column">
+      <app-nav-menu></app-nav-menu>
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
 
