--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,3 @@
-<h1>Login</h1>
-<p>{{message}}</p>
-<app-player-search></app-player-search>
-<button (click)="login()">login</button>
+<div class="container" style="margin-top: 100px;">
+  <app-player-search (onSelect)="login($event)"></app-player-search>
+</div>
