--- a/src/app/shared/player-search/player-search.component.css
+++ b/src/app/shared/player-search/player-search.component.css
@@ -1,31 +1,16 @@
 :host {
   font-size: 14px;
 }
-.player-search__input {
-  border: none;
-  border-bottom: 1px solid #3aa9e0;
-  outline: none;
-  padding: 0px 10px;
-  line-height: 1.5em;
-  font-size: 14px;
+.column {
+  cursor: pointer;
 }
-.player-search__result {
-  display: flex;
-  width: 400px;
-  max-height: 400px;
-  overflow: auto;
-  border: 1px solid #dddddd;
+.column:hover {
+  transition: all 1s ease-out;
+  box-shadow: 0 0 50px rgba(30, 77, 207, 0.2);
 }
-.player-search__result::after {
-}
-.player-search__entry {
-  position: relative;
-  padding-left: 88px;
-}
-.player-search__avatar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 80px;
-  height: 80px;
+.name {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
